added in font-awesome, created tweet card, modified profile card

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -9,8 +9,8 @@ User on the left, tweets in the middle, highlighted tweet on the right that also
       <%= render 'shared/profile_box' %>
     </div>
 
-    <div id="column-tweets" class="col-xs-12 col-md-6 col-lg-4 bg-warning">
-      Content
+    <div id="column-tweets" class="col-xs-12 col-md-6 col-lg-4">
+      <%= render 'shared/tweet_box' %>
     </div>
 
     <div id="colum-highlight" class="col-xs-12 col-md-6 col-lg-4 bg-primary">
