--- a/app/views/shared/_profile_box.html.erb
+++ b/app/views/shared/_profile_box.html.erb
@@ -2,7 +2,9 @@
   <div class="container">
   <div class="row m-2">
     <div class="avatar-profile">
-      <%= image_tag 'meintaipei.jpg' %>
+      <%= link_to '#' do  %>
+        <%= image_tag 'meintaipei.jpg' %>
+      <% end %>
     </div>
     <div class="card-profile-info ml-2">
       <h3>Name</h3>
@@ -12,7 +14,7 @@
       <%= link_to "Follow Me", '#'  %>
     </div>
   </div>
-  <div class="card-profile-bio border-top pt-2">
+  <div class="card-profile-bio border-top pt-2 pb-2">
     THIS IS WHERE A BIO WILL GO
     IT COULD BE OF SOME LENGTH
     OR IT COULD BE QUITE SHORT
