--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,3 +1,4 @@
+<% if signed_in? %>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,3 +11,8 @@
     </div>
   </div>
 </nav>
+<% else %>
+  <nav class="navbar navbar-light bg-light justify-content-center">
+    <%= link_to "Sign Up", "#", class: "navbar-brand" %>
+  </nav>
+<% end %>
