--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -7,6 +7,7 @@ User on the left, tweets in the middle, highlighted tweet on the right that also
 
     <div id="colum-profile" class="col-xs-12 col-md-6 col-lg-4">
       <%= render 'shared/profile_box' %>
+      <%= render 'shared/write_tweet' %>
     </div>
 
     <div id="column-tweets" class="col-xs-12 col-md-6 col-lg-4">
