form submission works along with basic redisplay

--- a/app/views/shared/_tweet_box.html.erb
+++ b/app/views/shared/_tweet_box.html.erb
@@ -18,7 +18,7 @@ This will need to be generated with a loop over the data but below shall be the 
       <% end %>
     </div>
     <div class="card-tweet-tweet ml-2 border-top pt-2 pb-2">
-      THIS IS WHERE SOME CONTENT FOR A TWEET WILL GO. IT WILL BE NO MORE THAN 140 CHARACTERS LONG. This text is about 140 characters long. Good..
+     <%= tweet.content %>
     </div>
     <div class="card-tweet-stats border-top pt-2">
       <div class="d-flex justify-content-around">
