margin for index, br for tweet breaks, name added to profile card

--- a/app/views/shared/_profile_box.html.erb
+++ b/app/views/shared/_profile_box.html.erb
@@ -7,7 +7,7 @@
       <% end %>
     </div>
     <div class="card-profile-info ml-2">
-      <h3>Name</h3>
+      <h3><%= @user.username.capitalize %></h3>
       <p>Following #</p>
       <p>Followers #</p>
       <p>Tweet #</p>
