--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,7 +2,7 @@
 On lage screen, it should be a 3 column display
 User on the left, tweets in the middle, highlighted tweet on the right that also shows responses to it.
  -->
-<div class="container">
+<div class="container mt-4">
   <div class="row justify-content-between">
 
     <div id="colum-profile" class="col-xs-12 col-md-6 col-lg-4">
