cleaned up controller, copied tweets#index layout, edited controller tweets query

--- a/app/views/shared/_profile_box.html.erb
+++ b/app/views/shared/_profile_box.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
   <div class="row m-2">
     <div class="avatar-profile">
-      <%= link_to '#' do  %>
+      <%= link_to user_path(@user) do  %>
         <%= image_tag 'meintaipei.jpg' %>
       <% end %>
     </div>
