--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,19 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container mt-4">
+  <div class="row justify-content-between">
+
+    <div id="column-profile" class="col-xs-12 col-md-6 col-lg-4">
+      <%= render 'shared/profile_box' %>
+      <%= render 'shared/write_tweet' %>
+    </div>
+
+    <div id="column-tweets" class="col-xs-12 col-md-6 col-lg-4">
+      <% @tweets.reverse.each do |tweet| %>
+        <%= render 'shared/tweet_box', tweet: tweet %>
+      <% end %>
+    </div>
+
+    <div id="colum-highlight" class="col-xs-12 col-md-6 col-lg-4 border">
+      Content
+    </div>
+  </div>
+</div>
