added edit and follow button to user card

--- a/app/assets/stylesheets/_avatars.scss.erb
+++ b/app/assets/stylesheets/_avatars.scss.erb
@@ -1,7 +1,9 @@
 .avatar-profile {
+  position: relative;
   img {
     height: 80px;
-    border-radius: 50%
+    border-radius: 50%;
+    display: block;
   }
 }
 
