--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -2,6 +2,12 @@
   width: 100%;
   border: 1px solid black;
   box-shadow: 1px 1px 1px;
+  .profile-button {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 0;
+  }
   .card-profile-info {
     h3, p {
       margin: 0;
