styled devise forms a bit - added bio section

--- a/app/views/shared/_profile_box.html.erb
+++ b/app/views/shared/_profile_box.html.erb
@@ -5,7 +5,7 @@
       <%= link_to user_path(@user) do  %>
         <%= image_tag 'meintaipei.jpg' %>
       <% end %>
-        <%= link_to "Edit", '#', class: "btn btn-outline-secondary profile-button" %>
+        <%= link_to "Edit", edit_user_registration_path(@user), class: "btn btn-outline-secondary profile-button" %>
       <% if @user == current_user %>
         <% else %>
         <%= link_to "Follow", '#', class: "btn btn-outline-success profile-button" %>
