name line added to tweet card

--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -23,7 +23,14 @@
   width: 100%;
   margin: 0 auto;
   border: 1px solid black;
+  .card-tweet-topline {
+    flex-grow: 1;
+    margin-left: 12px;
+    text-align: center;
+  }
   .row {
+    width: 96%;
+    margin: 0 auto;
     i {
       margin: 0;
       font-size: 25px;
