--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,9 @@
   <div class="row justify-content-between">
 
     <div id="column-profile" class="col-xs-12 col-md-6 col-lg-4">
-      <%= render 'shared/profile_box' %>
+      <div id="profile-card-box">
+        <%= render 'shared/profile_box' %>
+      </div>
       <%= render 'shared/write_tweet' %>
     </div>
 
