hid like and follow btns from one's own tweets

--- a/app/views/shared/_tweet_box.html.erb
+++ b/app/views/shared/_tweet_box.html.erb
@@ -13,11 +13,13 @@ This will need to be generated with a loop over the data but below shall be the 
       <div class="card-tweet-topline">
         <p><%= tweet.user.username.capitalize %></p>
         <div class="d-flex justify-content-around">
-          <%= link_to "#" do  %>
-            <i class="fas fa-heart"></i>
-          <% end %>
-          <%= link_to "#" do  %>
-            <i class="fas fa-shoe-prints"></i>
+          <% if tweet.user != current_user %>
+            <%= link_to "#" do  %>
+              <i class="fas fa-heart"></i>
+            <% end %>
+            <%= link_to "#" do  %>
+              <i class="fas fa-shoe-prints"></i>
+            <% end %>
           <% end %>
         </div>
       </div>
