--- a/app/views/shared/_write_tweet.html.erb
+++ b/app/views/shared/_write_tweet.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row justify-content-around">
       <h3>Compose a Tweet</h3>
-      <%= simple_form_for @tweet do |f| %>
+      <%= simple_form_for @tweet, remote: true do |f| %>
         <%= f.input :content, label: false, placeholder: "up to 140 character"  %>
         <div class="d-flex justify-content-between mb-2">
           <div>msg</div>
