--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -31,6 +31,12 @@
     flex-grow: 1;
     margin-left: 12px;
     text-align: center;
+    a {
+      text-decoration: none;
+      font-size: 20px;
+      font-weight: bold;
+      color: #254e58
+    }
   }
   .row {
     width: 96%;
