--- a/app/views/shared/_nav_pills.html.erb
+++ b/app/views/shared/_nav_pills.html.erb
@@ -1,4 +1,4 @@
-<ul class="nav nav-pills mb-3 d-flex justify-content-between" id="pills-tab" role="tablist">
+<ul class="nav nav-pills mb-3 d-flex justify-content-between border" id="pills-tab" role="tablist">
   <li class="nav-item flex-grow-1">
       <a class="nav-link active text-center" data-toggle="pill" href="#home" aria-controls="pills-home" aria-selected="true">Following</a>
   </li>
