main 3, signup, login, edit styled and unified

--- a/app/assets/stylesheets/_devise_forms.scss.erb
+++ b/app/assets/stylesheets/_devise_forms.scss.erb
@@ -12,14 +12,19 @@
 
 #devise-shared-links {
   a{
+    margin-top: 8px;
     display: inline-block;
     text-align: center;
-    border: 1px solid orange;
+    border: 1px solid #254e58;
     border-radius: 5px;
     background-color: transparent;
     padding: 6px 12px;
     width: 100%;
-    color: orange;
+    color: #254e58;
     font-weight: bold;
+    &:hover {
+      color: white;
+      background-color: #254e58;
+    }
   }
 }
