--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,7 @@
 
       <%= link_to "My Page", user_path(current_user), class: "nav-item nav-link active text-white"  %>
       <%= link_to "log out", destroy_user_session_path, method: :delete, class: "nav-item nav-link text-white"  %>
+      <%= link_to "User Index", users_path, class: "nav-item nav-link text-white"  %>
       <a class="nav-item nav-link disabled text-white" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
     </div>
   </div>
