--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-lg-4">
+      <% @users.reverse.each do |user| %>
+        <%= render 'shared/profile_box2', user: user %>
+        <br>
+      <% end %>
+    </div>
+  </div>
+</div>
