chagned box shadow

--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -1,9 +1,8 @@
 .card-profile {
   background-color: beige;
   width: 100%;
-  border: 1px solid black;
   border-radius: 15px;
-  box-shadow: 0px 0px 1px 1px;
+  box-shadow: 0px 0px 8px 1px rgba(0,0,0,.15);
   .profile-button {
     position: absolute;
     bottom: 0;
@@ -22,10 +21,9 @@
 
 .card-tweet {
   background-color: beige;
-  box-shadow: 0px 0px 1px 1px;
+  box-shadow: 0px 0px 8px 1px rgba(0,0,0,.15);
   width: 100%;
   margin: 0 auto;
-  border: 1px solid black;
   border-radius: 15px;
   .card-tweet-topline {
     flex-grow: 1;
@@ -63,9 +61,8 @@
 .card-write-tweet {
   background-color: beige;
   margin: 8px 0;
-  border: 1px solid black;
   border-radius: 15px;
-  box-shadow: 0px 0px 1px 1px;
+  box-shadow: 0px 0px 8px 1px rgba(0,0,0,.15);
   form{
     width: 94%;
     margin: 0 auto;
