--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -3,6 +3,14 @@ On lage screen, it should be a 3 column display
 User on the left, tweets in the middle, highlighted tweet on the right that also shows responses to it.
  -->
 
+ <div id="app">
+  <div>
+    <router-view></router-view>
+  </div>
+</div>
+
+<%= javascript_pack_tag 'app' %>
+
 <% if signed_in? %>
   <div class="container mt-4">
     <div class="row justify-content-between">
