--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -29,7 +29,9 @@ User on the left, tweets in the middle, highlighted tweet on the right that also
       </div>
 
       <div id="colum-highlight" class="col-xs-12 col-md-6 col-lg-4 border">
-
+        <div id="highlighted-tweet">
+            Some content
+        </div>
       </div>
     </div>
   </div>
