--- a/app/views/shared/_write_response.html.erb
+++ b/app/views/shared/_write_response.html.erb
@@ -1,14 +1,17 @@
 <div class="card-write-tweet">
   <div class="container">
     <div class="row justify-content-around">
-      <h3>Compose a Tweet</h3>
-      <%= simple_form_for @tweet, remote: true do |f| %>
-        <%= f.input :content, label: false, placeholder: "up to 140 character"  %>
+      <h3>Compose a Response</h3>
+      <%= simple_form_for response, remote: true, url: reply_path, method: :post do |f| %>
+        <%= f.hidden_field :parent_id %>
+        <%= f.input :content, label: false, placeholder: "up to 140 character" %>
         <div class="d-flex justify-content-between mb-2">
-          <div></div>
+          <div>
+          </div>
           <%= f.button :submit, class: "btn btn-outline-primary" %>
         </div>
       <% end %>
     </div>
   </div>
 </div>
+<br>
