--- a/app/views/relationships/unfollow_user.js.erb
+++ b/app/views/relationships/unfollow_user.js.erb
@@ -1,4 +1,4 @@
 var profileCard = document.getElementById('profile-card-box').firstElementChild
 profileCard.innerHTML = ``
-profileCard.innerHTML = `<%= render 'shared/profile_box' %>`
+profileCard.innerHTML = `<%= render 'shared/profile_box', user: @user %>`
 
