--- a/app/views/shared/_tweet_box.html.erb
+++ b/app/views/shared/_tweet_box.html.erb
@@ -3,19 +3,14 @@
     <div class="row p-2 mt-2 justify-content-around align-items-center">
       <div class="avatar-tweet">
         <%= link_to user_path(tweet.user.id) do  %>
-          <%= image_tag 'meintaipei.jpg' %>
+          <%= image_tag 'default-avatar.png' %>
         <% end %>
       </div>
       <div class="card-tweet-topline">
         <%= link_to tweet.user.username.capitalize, user_path(tweet.user.id)  %>
         <div class="d-flex justify-content-around">
-          <% if tweet.user != current_user %>
-            <%= link_to "#" do  %>
-              <i class="fas fa-heart"></i>
-            <% end %>
-            <%= link_to tweet_path(tweet.id), remote: true do  %>
-              <i class="fas fa-binoculars"></i>
-            <% end %>
+          <%= link_to tweet_path(tweet.id), remote: true do  %>
+            <i class="fas fa-reply"> Reply</i>
           <% end %>
         </div>
       </div>
@@ -25,9 +20,8 @@
     </div>
     <div class="card-tweet-stats border-top pt-2">
       <div class="d-flex justify-content-around">
-        <p>Likes <strong>1</strong></p>
           <p>Replies: <strong><%= tweet.children.count %></strong></p>
-        <p><%= tweet.created_at.strftime("%b %d, %Y") %></p>
+        <p><%= time_ago_in_words(tweet.created_at) %> ago</p>
       </div>
     </div>
   </div>
