--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -17,21 +17,23 @@ User on the left, tweets in the middle, highlighted tweet on the right that also
 
       <div id="colum-profile" class="col-xs-12 col-md-6 col-lg-4">
         <div id="profile-card-box">
-          <%= render 'shared/profile_box' %>
+          <%= render 'shared/profile_box', user: @user %>
         </div>
         <div id="write-tweet-card">
           <%= render 'shared/write_tweet' %>
         </div>
+        <div id="colum-highlight">
+          <div id="highlighted-tweet">
+            Click on a tweet to reply to it here
+          </div>
+        </div>
       </div>
 
-      <div id="column-tweets" class="col-xs-12 col-md-6 col-lg-4">
+      <div id="column-tweets" class="col-xs-12 col-md-6 col-lg-4 mt-2">
         <%= render 'shared/nav_pills' %>
       </div>
+      <div id="" class="col-xs-12 col-md-6 col-lg-4">
 
-      <div id="colum-highlight" class="col-xs-12 col-md-6 col-lg-4 border">
-        <div id="highlighted-tweet">
-            Some content
-        </div>
       </div>
     </div>
   </div>
