--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,19 @@
 <div class="container mt-4">
   <div class="row justify-content-between">
-
     <div id="column-profile" class="col-xs-12 col-md-6 col-lg-4">
       <div id="profile-card-box">
-        <%= render 'shared/profile_box' %>
+        <%= render 'shared/profile_box', user: @user %>
       </div>
-      <%= render 'shared/write_tweet' %>
+      <%= render 'shared/write_tweet', user: @user %>
+      <div id="colum-highlight">
+      </div>
     </div>
-
     <div id="column-tweets" class="col-xs-12 col-md-6 col-lg-4">
-
       <% @tweets.reverse.each do |tweet| %>
         <%= render 'shared/tweet_box', tweet: tweet %>
       <% end %>
     </div>
-
-    <div id="colum-highlight" class="col-xs-12 col-md-6 col-lg-4 border">
-      Content
+    <div class="col-xs-12 col-md-6 col-lg-4 ">
     </div>
   </div>
 </div>
